# rust_zero_to_production

./: README.md
zero2prod/: .env  Cargo.toml
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  print_helpers.rs  startup.rs
zero2prod/src/routes/: greet.rs  mod.rs  subscriptions.rs
zero2prod/tests/: health_check.rs  health_checker.rs
